7012087: JSR 292 Misleading exception message for a non-bound MH for a virtual method

Improve error message formatting to give more information to user.  Also, catch a corner case related to 6930553 and 6844449.

Reviewed-by: kvn